spool.txt
Microsoft Windows [Version 6.1.7601]
Copyright (c) 2009 Microsoft Corporation.  All rights reserved.

C:\Users\priti>npm install express --save
npm WARN saveError ENOENT: no such file or directory, open 'C:\Users\priti\packa
ge.json'
C:\Users\priti
`-- express@4.16.1
  +-- accepts@1.3.4
  | +-- mime-types@2.1.17
  | | `-- mime-db@1.30.0
  | `-- negotiator@0.6.1
  +-- array-flatten@1.1.1
  +-- body-parser@1.18.2
  | +-- bytes@3.0.0
  | +-- http-errors@1.6.2
  | | +-- inherits@2.0.3
  | | `-- setprototypeof@1.0.3
  | +-- iconv-lite@0.4.19
  | `-- raw-body@2.3.2
  +-- content-disposition@0.5.2
  +-- content-type@1.0.4
  +-- cookie@0.3.1
  +-- cookie-signature@1.0.6
  +-- debug@2.6.9
  | `-- ms@2.0.0
  +-- depd@1.1.1
  +-- encodeurl@1.0.1
  +-- escape-html@1.0.3
  +-- etag@1.8.1
  +-- finalhandler@1.1.0
  | `-- unpipe@1.0.0
  +-- fresh@0.5.2
  +-- merge-descriptors@1.0.1
  +-- methods@1.1.2
  +-- on-finished@2.3.0
  | `-- ee-first@1.1.1
  +-- parseurl@1.3.2
  +-- path-to-regexp@0.1.7
  +-- proxy-addr@2.0.2
  | +-- forwarded@0.1.2
  | `-- ipaddr.js@1.5.2
  +-- qs@6.5.1
  +-- range-parser@1.2.0
  +-- safe-buffer@5.1.1
  +-- send@0.16.1
  | +-- destroy@1.0.4
  | `-- mime@1.4.1
  +-- serve-static@1.13.1
  +-- setprototypeof@1.1.0
  +-- statuses@1.3.1
  +-- type-is@1.6.15
  | `-- media-typer@0.3.0
  +-- utils-merge@1.0.1
  `-- vary@1.1.2

npm WARN enoent ENOENT: no such file or directory, open 'C:\Users\priti\package.
json'
npm WARN priti No description
npm WARN priti No repository field.
npm WARN priti No README data
npm WARN priti No license field.

C:\Users\priti>node index.js
module.js:471
    throw err;
    ^

Error: Cannot find module 'C:\Users\priti\index.js'
    at Function.Module._resolveFilename (module.js:469:15)
    at Function.Module._load (module.js:417:25)
    at Module.runMain (module.js:604:10)
    at run (bootstrap_node.js:383:7)
    at startup (bootstrap_node.js:149:9)
    at bootstrap_node.js:496:3

C:\Users\priti>cd desktop

C:\Users\priti\Desktop>cd C:\

C:\>cd desktop
The system cannot find the path specified.

C:\>cd C:\Users\priti\Desktop\demo_app

C:\Users\priti\Desktop\demo_app>node index.js
C:\Users\priti\Desktop\demo_app\index.js:1
(function (exports, require, module, __filename, __dirname) { const express=requ
ire('express' 4.16.1)

    ^^^^^^^^^

SyntaxError: missing ) after argument list
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.runMain (module.js:604:10)
    at run (bootstrap_node.js:383:7)
    at startup (bootstrap_node.js:149:9)

C:\Users\priti\Desktop\demo_app>node index.js
Example app listening on port 3000!
^C
C:\Users\priti\Desktop\demo_app>
C:\Users\priti\Desktop\demo_app>excit;;
'excit' is not recognized as an internal or external command,
operable program or batch file.

C:\Users\priti\Desktop\demo_app>
C:\Users\priti\Desktop\demo_app>npm install express --save
^CTerminate batch job (Y/N)? y

C:\Users\priti\Desktop\demo_app>node index.js
Example app listening on port 3000!
^C
C:\Users\priti\Desktop\demo_app>node index.js
Example app listening on port 3000!
^C
C:\Users\priti\Desktop\demo_app>node index.js
Example app listening on port 3000!
AssertionError: missing path
    at Module.require (module.js:495:3)
    at require (internal/module.js:20:19)
    at C:\Users\priti\Desktop\demo_app\index.js:6:11
    at Layer.handle [as handle_request] (C:\Users\priti\node_modules\express\lib
\router\layer.js:95:5)
    at trim_prefix (C:\Users\priti\node_modules\express\lib\router\index.js:317:
13)
    at C:\Users\priti\node_modules\express\lib\router\index.js:284:7
    at Function.process_params (C:\Users\priti\node_modules\express\lib\router\i
ndex.js:335:12)
    at next (C:\Users\priti\node_modules\express\lib\router\index.js:275:10)
    at expressInit (C:\Users\priti\node_modules\express\lib\middleware\init.js:4
0:5)
    at Layer.handle [as handle_request] (C:\Users\priti\node_modules\express\lib
\router\layer.js:95:5)
AssertionError: missing path
    at Module.require (module.js:495:3)
    at require (internal/module.js:20:19)
    at C:\Users\priti\Desktop\demo_app\index.js:6:11
    at Layer.handle [as handle_request] (C:\Users\priti\node_modules\express\lib
\router\layer.js:95:5)
    at trim_prefix (C:\Users\priti\node_modules\express\lib\router\index.js:317:
13)
    at C:\Users\priti\node_modules\express\lib\router\index.js:284:7
    at Function.process_params (C:\Users\priti\node_modules\express\lib\router\i
ndex.js:335:12)
    at next (C:\Users\priti\node_modules\express\lib\router\index.js:275:10)
    at expressInit (C:\Users\priti\node_modules\express\lib\middleware\init.js:4
0:5)
    at Layer.handle [as handle_request] (C:\Users\priti\node_modules\express\lib
\router\layer.js:95:5)
^C
C:\Users\priti\Desktop\demo_app>


